[project]
name = "VNDB-Calendar"
version = "5.0.0"
description = "VNDB New Release as subscribable ICS/iCalendar."
keywords = ["calendar", "ics", "icalendar", "vndb", "vndb-api", "galgame", "game", "visualnovel"]
requires-python = ">=3.10"
authors = [{ name = "Vinfall" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Topic :: File Formats",
  "Private :: Do Not Upload",
]
dependencies = ["dateparser>=1.2.0", "requests>=2.32.3", "ics==0.8.0.dev0"]

[project.urls]
homepage = "https://github.com/Vinfall/VNDB-Calendar"
source = "https://github.com/Vinfall/VNDB-Calendar"
issues = "https://github.com/Vinfall/VNDB-Calendar/issues"
changelog = "https://github.com/Vinfall/VNDB-Calendar/blob/main/CHANGELOG.md"

# Linter
[tool.pylint]
disable = ["missing-module-docstring", "missing-function-docstring", "no-else-return"]
