[project]
name = "VNDB-Calendar"
version = "5.0.0"
description = "VNDB New Release as subscribable ICS/iCalendar."
keywords = ["calendar", "ics", "icalendar", "vndb", "vndb-api", "galgame", "game", "visualnovel"]
requires-python = ">=3.10"
authors = [{ name = "Vinfall" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Topic :: File Formats",
  "Private :: Do Not Upload",
]
dependencies = ["dateparser>=1.2.0", "requests>=2.32.3", "ics==0.8.0.dev0"]

[project.urls]
homepage = "https://github.com/Vinfall/VNDB-Calendar"
source = "https://github.com/Vinfall/VNDB-Calendar"
issues = "https://github.com/Vinfall/VNDB-Calendar/issues"
changelog = "https://github.com/Vinfall/VNDB-Calendar/blob/main/CHANGELOG.md"

[tool.ruff]
# force-exclude = true
unsafe-fixes = true

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501", # EditorConfig
  "COM", # commas
  "D1", # docstring
  "D212",
  "D203", # prefer D211
  "ERA", # commented-out-code
  "FIX", # fixme
  "TD002", # todo
  "TD003",
  "PLR2004", # magic-value-comparison
  "PTH", # flake8-use-pathlib: slower than os
  "RET505", # superfluous-else-return
  "T20", # print

  # repo specific
  # intendend Unicode
  "RUF001",
  "RUF002",
  "RUF003",
]
# unfixable = ["F401"]

[[tool.mypy.overrides]]
module = ["dateparser.*", "ics.*", "requests.*"]
ignore_missing_imports = true
