[project]
name = "VNDB-Calendar"
version = "5.7.2"
description = "VNDB New Release as subscribable ICS/iCalendar."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Vinfall" }]
keywords = ["calendar", "galgame", "game", "icalendar", "ics", "visualnovel", "vndb", "vndb-api"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "Topic :: File Formats",
  "Topic :: Games/Entertainment",
]
dependencies = ["dateparser>=1.2.2", "ics==0.8.0.dev0", "requests>=2.32.5"]

[project.urls]
changelog = "https://github.com/Vinfall/VNDB-Calendar/blob/main/CHANGELOG.md"
homepage = "https://github.com/Vinfall/VNDB-Calendar"
issues = "https://github.com/Vinfall/VNDB-Calendar/issues"
source = "https://github.com/Vinfall/VNDB-Calendar"

[tool.ruff]
# force-exclude = true
unsafe-fixes = true

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501", # EditorConfig
  "COM", # commas
  "D1", # docstring
  "D212",
  "D203", # prefer D211
  "ERA", # commented-out-code
  "FIX", # fixme
  "TD002", # todo
  "TD003",
  "PLR2004", # magic-value-comparison
  "PTH", # flake8-use-pathlib: slower than os
  "RET505", # superfluous-else-return
  "T20", # print
  # repo specific
  # intendend Unicode
  "RUF001",
  "RUF002",
  "RUF003",
]
# unfixable = ["F401"]

[tool.ty.rules]
unresolved-import = "ignore" # .venv excluded from vsc workspace
